--- a/index.html
+++ b/index.html
@@ -61,22 +61,241 @@
   </div>
 
 <script>
-// === BEGIN: ORIGINAL GAME CODE (UNCHANGED) ===
-// Game code identical as before but wrapped behind payment start
-let GAME_ACTIVE = false;
+// === BEGIN: GAME CODE (running after payment) ===
+// Global flag toggled by pay/start
+window.GAME_ACTIVE = false;
 
 function startGame() {
-  GAME_ACTIVE = true;
-  document.getElementById('intro-overlay').classList.add('hidden');
+  window.GAME_ACTIVE = true;
+  const overlay = document.getElementById('intro-overlay');
+  overlay.classList.add('hidden');
+  // restore overlay title/button for "play again" later
+  const titleEl = overlay.querySelector('.title');
+  if (titleEl) titleEl.textContent = 'Puzzle Bobble';
+  const btn = document.getElementById('play-start');
+  if (btn) btn.textContent = 'Pay & Play';
+  const statusEl = document.getElementById('status');
+  if (statusEl) statusEl.classList.add('hidden');
   initGame();
 }
 
 function initGame() {
   const canvas = document.getElementById('game');
   const context = canvas.getContext('2d');
-  /* Original Puzzle Bobble code goes here unchanged */
+
+  // === ORIGINAL PUZZLE BOBBLE LOGIC (unchanged visuals/physics) ===
+  const grid = 32;
+  const level1 = [
+    ['R','R','Y','Y','B','B','G','G'],
+    ['R','R','Y','Y','B','B','G'],
+    ['B','B','G','G','R','R','Y','Y'],
+    ['B','G','G','R','R','Y','Y']
+  ];
+  const colorMap = { 'R':'red','G':'green','B':'blue','Y':'yellow' };
+  const colors = Object.values(colorMap);
+  const bubbleGap = 1;
+  const wallSize = 4;
+  const bubbles = [];
+  let particles = [];
+
+  let GAME_OVER = false; // block input/loop when true
+  let lastMatchCount = 0;
+
+  function degToRad(deg){ return (deg*Math.PI)/180; }
+  function rotatePoint(x,y,a){ const s=Math.sin(a), c=Math.cos(a); return { x:x*c - y*s, y:x*s + y*c }; }
+  function getRandomInt(min,max){ min=Math.ceil(min); max=Math.floor(max); return Math.floor(Math.random()*(max-min+1))+min; }
+  function getDistance(a,b){ const dx=a.x-b.x, dy=a.y-b.y; return Math.hypot(dx,dy); }
+  function collides(a,b){ return getDistance(a,b) < a.radius + b.radius; }
+
+  function getClosestBubble(obj, activeState=false){
+    const close = bubbles.filter(b => b.active==activeState && collides(obj,b));
+    if (!close.length) return;
+    return close.map(b=>({ distance:getDistance(obj,b), bubble:b }))
+                .sort((a,b)=>a.distance-b.distance)[0].bubble;
+  }
+
+  function createBubble(x,y,color){
+    const row = Math.floor(y/grid);
+    const col = Math.floor(x/grid);
+    const startX = row % 2 === 0 ? 0 : 0.5 * grid;
+    const center = grid / 2;
+    bubbles.push({
+      x: wallSize + (grid + bubbleGap) * col + startX + center,
+      y: wallSize + (grid + bubbleGap - 4) * row + center,
+      radius: grid/2,
+      color: color,
+      active: !!color
+    });
+  }
+
+  function getNeighbors(bubble){
+    const neighbors=[];
+    const dirs=[
+      rotatePoint(grid,0,0),
+      rotatePoint(grid,0,degToRad(60)),
+      rotatePoint(grid,0,degToRad(120)),
+      rotatePoint(grid,0,degToRad(180)),
+      rotatePoint(grid,0,degToRad(240)),
+      rotatePoint(grid,0,degToRad(300))
+    ];
+    for (let i=0;i<dirs.length;i++){
+      const dir = dirs[i];
+      const probe = { x:bubble.x+dir.x, y:bubble.y+dir.y, radius:bubble.radius };
+      const n = getClosestBubble(probe,true);
+      if (n && n!==bubble && !neighbors.includes(n)) neighbors.push(n);
+    }
+    return neighbors;
+  }
+
+  function removeMatch(targetBubble){
+    const matches=[targetBubble];
+    bubbles.forEach(b=>b.processed=false);
+    targetBubble.processed=true;
+    let neighbors=getNeighbors(targetBubble);
+    for (let i=0;i<neighbors.length;i++){
+      const n=neighbors[i];
+      if (!n.processed){
+        n.processed=true;
+        if (n.color===targetBubble.color){
+          matches.push(n);
+          neighbors = neighbors.concat(getNeighbors(n));
+        }
+      }
+    }
+    lastMatchCount = matches.length;
+    if (matches.length>=3){ matches.forEach(b=>b.active=false); return true; }
+    return false;
+  }
+
+  function dropFloatingBubbles(){
+    const active = bubbles.filter(b=>b.active);
+    active.forEach(b=>b.processed=false);
+    let neighbors = active.filter(b=> b.y - grid <= wallSize);
+    for (let i=0;i<neighbors.length;i++){
+      const n=neighbors[i];
+      if (!n.processed){ n.processed=true; neighbors = neighbors.concat(getNeighbors(n)); }
+    }
+    active.filter(b=>!b.processed).forEach(b=>{
+      b.active=false; particles.push({ x:b.x, y:b.y, color:b.color, radius:b.radius, active:true });
+    });
+  }
+
+  for (let row=0; row<10; row++){
+    for (let col=0; col<(row%2===0?8:7); col++){
+      const color = level1[row]?.[col];
+      createBubble(col*grid, row*grid, colorMap[color]);
+    }
+  }
+
+  const curBubblePos = { x: canvas.width/2, y: canvas.height - grid*1.5 };
+  const curBubble = { x:curBubblePos.x, y:curBubblePos.y, color:'red', radius:grid/2, speed:8, dx:0, dy:0 };
+  let shootDeg = 0;
+  const minDeg = degToRad(-60), maxDeg = degToRad(60);
+  let shootDir = 0;
+
+  function getNewBubble(){
+    curBubble.x = curBubblePos.x; curBubble.y = curBubblePos.y; curBubble.dx = curBubble.dy = 0;
+    const rand = getRandomInt(0, colors.length-1); curBubble.color = colors[rand];
+  }
+
+  function handleCollision(bubble){
+    bubble.color = curBubble.color;
+    bubble.active = true;
+    getNewBubble();
+    const didMatch = removeMatch(bubble);
+    dropFloatingBubbles();
+    if (!didMatch){
+      // shot placed without a match: lose & pay again
+      gameOver();
+    }
+  }
+
+  function gameOver(){
+    GAME_OVER = true;
+    window.GAME_ACTIVE = false;
+    // show overlay asking to pay again
+    const overlay = document.getElementById('intro-overlay');
+    const titleEl = overlay.querySelector('.title');
+    if (titleEl) titleEl.textContent = 'Game Over';
+    const btn = document.getElementById('play-start');
+    if (btn) btn.textContent = 'Pay & Play Again';
+    const statusEl = document.getElementById('status');
+    if (statusEl) statusEl.classList.add('hidden');
+    overlay.classList.remove('hidden');
+  }
+
+  function loop(){
+    if (GAME_OVER) return;
+    requestAnimationFrame(loop);
+    context.clearRect(0,0,canvas.width,canvas.height);
+
+    // move the shooting arrow
+    shootDeg = shootDeg + degToRad(2) * shootDir;
+    if (shootDeg < minDeg) shootDeg = minDeg; else if (shootDeg > maxDeg) shootDeg = maxDeg;
+
+    // move current bubble by velocity
+    curBubble.x += curBubble.dx; curBubble.y += curBubble.dy;
+
+    // walls bounce
+    if (curBubble.x - grid/2 < wallSize){ curBubble.x = wallSize + grid/2; curBubble.dx *= -1; }
+    else if (curBubble.x + grid/2 > canvas.width - wallSize){ curBubble.x = canvas.width - wallSize - grid/2; curBubble.dx *= -1; }
+
+    // top collision
+    if (curBubble.y - grid/2 < wallSize){ const closest = getClosestBubble(curBubble); handleCollision(closest); }
+
+    // bubble collision
+    for (let i=0;i<bubbles.length;i++){
+      const b = bubbles[i];
+      if (b.active && collides(curBubble,b)){
+        const closest = getClosestBubble(curBubble);
+        if (!closest){ alert('Game Over'); window.location.reload(); }
+        if (closest) handleCollision(closest);
+      }
+    }
+
+    // particles
+    particles.forEach(p=> p.y += 8);
+    particles = particles.filter(p=> p.y < canvas.height - grid/2);
+
+    // walls
+    context.fillStyle='lightgrey';
+    context.fillRect(0,0,canvas.width,wallSize);
+    context.fillRect(0,0,wallSize,canvas.height);
+    context.fillRect(canvas.width-wallSize,0,wallSize,canvas.height);
+
+    // bubbles & particles
+    bubbles.concat(particles).forEach(b=>{
+      if (!b.active) return; context.fillStyle=b.color; context.beginPath(); context.arc(b.x,b.y,b.radius,0,2*Math.PI); context.fill();
+    });
+
+    // arrow
+    context.save();
+    context.translate(curBubblePos.x, curBubblePos.y); context.rotate(shootDeg); context.translate(0,-grid/2*4.5);
+    context.strokeStyle='white'; context.lineWidth=2; context.beginPath();
+    context.moveTo(0,0); context.lineTo(0, grid*2);
+    context.moveTo(0,0); context.lineTo(-10, grid*0.4);
+    context.moveTo(0,0); context.lineTo(10, grid*0.4);
+    context.stroke();
+    context.restore();
+
+    // current bubble
+    context.fillStyle = curBubble.color; context.beginPath(); context.arc(curBubble.x, curBubble.y, curBubble.radius, 0, 2*Math.PI); context.fill();
+  }
+
+  // controls
+  document.addEventListener('keydown', (e)=>{
+    if (GAME_OVER) return;
+    if (e.code==='ArrowLeft') shootDir=-1; else if (e.code==='ArrowRight') shootDir=1;
+    if (e.code==='Space' && curBubble.dx===0 && curBubble.dy===0){ curBubble.dx = Math.sin(shootDeg)*curBubble.speed; curBubble.dy = -Math.cos(shootDeg)*curBubble.speed; }
+  });
+  document.addEventListener('keyup', (e)=>{
+    if ((e.code==='ArrowLeft' && shootDir===-1) || (e.code==='ArrowRight' && shootDir===1)) shootDir=0;
+  });
+
+  // start loop
+  requestAnimationFrame(loop);
 }
-// === END: ORIGINAL GAME CODE ===
+// === END: GAME CODE ===
 </script>
 
 <script type="module">
@@ -96,13 +315,26 @@ function initGame() {
   const statusEl = document.getElementById('status');
   const playStartBtn = document.getElementById('play-start');
 
-  function parseEther(x){ const [w,f=""]=String(x).split('.'); const frac=(f+'0'.repeat(18)).slice(0,18); return '0x'+(BigInt(w)*10n**18n+BigInt(frac)).toString(16); }
-  async function getProvider(){ try { const p = await sdk.wallet.getEthereumProvider(); if (p) return p; } catch {} return window.ethereum ?? null; }
+  function parseEther(x){
+    const [w,f=""]=String(x).split('.');
+    const frac=(f+'0'.repeat(18)).slice(0,18);
+    return '0x'+(BigInt(w)*10n**18n+BigInt(frac)).toString(16);
+  }
+  async function getProvider(){
+    try { const p = await sdk.wallet.getEthereumProvider(); if (p) return p; } catch {}
+    return window.ethereum ?? null;
+  }
   async function ensureChain(provider, chainId) {
     const current = (await provider.request({ method:'eth_chainId' }))?.toLowerCase();
     if (current === chainId.toLowerCase()) return;
-    try { await provider.request({ method:'wallet_switchEthereumChain', params:[{ chainId }] }); }
-    catch (e) { if (e?.code === 4902) { await provider.request({ method:'wallet_addEthereumChain', params:[{ chainId }] }); await provider.request({ method:'wallet_switchEthereumChain', params:[{ chainId }] }); } else { throw e; } }
+    try {
+      await provider.request({ method:'wallet_switchEthereumChain', params:[{ chainId }] });
+    } catch (e) {
+      if (e?.code === 4902) {
+        await provider.request({ method:'wallet_addEthereumChain', params:[{ chainId }] });
+        await provider.request({ method:'wallet_switchEthereumChain', params:[{ chainId }] });
+      } else { throw e; }
+    }
   }
 
   async function requiredPayment() {
@@ -122,7 +354,12 @@ function initGame() {
     try {
       btn.disabled = true;
       await requiredPayment();
-      startGame();
+      // If the game is already active (after a loss), reload for a clean state
+      if (window.GAME_ACTIVE) {
+        window.location.reload();
+      } else {
+        startGame();
+      }
     } catch (e) {
       statusEl.innerHTML += `<div class="warn">Payment failed or cancelled.</div>`;
     } finally {
