--- a/index.html
+++ b/index.html
@@ -36,6 +36,19 @@
   #status .warn { color:#fbbf24; }
   #status .err { color:#f87171; }
   #status a { color:#86c6ff; text-decoration:none; }
+
+  /* Mobile controls */
+  #mobile-controls { display:none; margin:6px auto 0; user-select:none; }
+  #mobile-controls .ctrl {
+    width:64px; height:64px; font-size:18px; font-weight:800;
+    background:#1dd979; color:#04130c; border-radius:12px; border:0; cursor:pointer;
+    box-shadow:0 3px 8px rgba(0,0,0,.3);
+  }
+  #mobile-controls .row { display:flex; justify-content:center; gap:10px; }
+  @media (max-width:720px) {
+    #mobile-controls { display:block; }
+    .hud { font-size:12px; }
+  }
 </style>
 </head>
 <body>
@@ -54,6 +67,15 @@
 
     <canvas width="271" height="392" id="game" aria-label="Puzzle Bobble game area"></canvas>
 
+    <!-- On-screen mobile controls -->
+    <div id="mobile-controls" class="hidden" aria-label="Mobile controls">
+      <div class="row" style="margin-top:2px;">
+        <button class="ctrl" data-dir="left"  aria-label="Aim left">←</button>
+        <button class="ctrl" data-dir="shoot" aria-label="Shoot">●</button>
+        <button class="ctrl" data-dir="right" aria-label="Aim right">→</button>
+      </div>
+    </div>
+
     <div class="hud">
       <div>Controls: <span class="kbd">←</span> <span class="kbd">→</span> &nbsp;/&nbsp; <span class="kbd">Space</span></div>
       <div class="muted">Dark UI shell — pay to start, and again if you lose.</div>
@@ -69,13 +91,17 @@ function startGame() {
   window.GAME_ACTIVE = true;
   const overlay = document.getElementById('intro-overlay');
   overlay.classList.add('hidden');
-  // restore overlay title/button for "play again" later
   const titleEl = overlay.querySelector('.title');
   if (titleEl) titleEl.textContent = 'Puzzle Bobble';
   const btn = document.getElementById('play-start');
   if (btn) btn.textContent = 'Pay & Play';
   const statusEl = document.getElementById('status');
   if (statusEl) statusEl.classList.add('hidden');
+
+  // show mobile controls on small screens
+  const mobileCtrl = document.getElementById('mobile-controls');
+  if (mobileCtrl && window.innerWidth <= 720) mobileCtrl.classList.remove('hidden');
+
   initGame();
 }
 
@@ -100,6 +126,12 @@ function initGame() {
 
   let GAME_OVER = false; // block input/loop when true
   let lastMatchCount = 0;
+
+  // track listeners for cleanup
+  let keydownHandler = null;
+  let keyupHandler = null;
+  let touchRemover = null;
+  let btnRemovers = [];
 
   function degToRad(deg){ return (deg*Math.PI)/180; }
   function rotatePoint(x,y,a){ const s=Math.sin(a), c=Math.cos(a); return { x:x*c - y*s, y:x*s + y*c }; }
@@ -213,6 +245,15 @@ function initGame() {
   function gameOver(){
     GAME_OVER = true;
     window.GAME_ACTIVE = false;
+    // hide mobile controls
+    const mobileCtrl = document.getElementById('mobile-controls');
+    if (mobileCtrl) mobileCtrl.classList.add('hidden');
+    // remove listeners
+    if (keydownHandler) window.removeEventListener('keydown', keydownHandler);
+    if (keyupHandler) window.removeEventListener('keyup', keyupHandler);
+    if (touchRemover) touchRemover();
+    btnRemovers.forEach(off=>off()); btnRemovers = [];
+
     // show overlay asking to pay again
     const overlay = document.getElementById('intro-overlay');
     const titleEl = overlay.querySelector('.title');
@@ -282,15 +323,79 @@ function initGame() {
     context.fillStyle = curBubble.color; context.beginPath(); context.arc(curBubble.x, curBubble.y, curBubble.radius, 0, 2*Math.PI); context.fill();
   }
 
-  // controls
-  document.addEventListener('keydown', (e)=>{
+  // --- keyboard (desktop) ---
+  keydownHandler = (e)=>{
     if (GAME_OVER) return;
     if (e.code==='ArrowLeft') shootDir=-1; else if (e.code==='ArrowRight') shootDir=1;
     if (e.code==='Space' && curBubble.dx===0 && curBubble.dy===0){ curBubble.dx = Math.sin(shootDeg)*curBubble.speed; curBubble.dy = -Math.cos(shootDeg)*curBubble.speed; }
-  });
-  document.addEventListener('keyup', (e)=>{
-    if ((e.code==='ArrowLeft' && shootDir===-1) || (e.code==='ArrowRight' && shootDir===1)) shootDir=0;
-  });
+  };
+  keyupHandler = (e)=>{ if ((e.code==='ArrowLeft' && shootDir===-1) || (e.code==='ArrowRight' && shootDir===1)) shootDir=0; };
+  window.addEventListener('keydown', keydownHandler);
+  window.addEventListener('keyup', keyupHandler);
+
+  // --- mobile buttons ---
+  const mobileCtrl = document.getElementById('mobile-controls');
+  if (mobileCtrl && window.innerWidth <= 720) {
+    const leftBtn = mobileCtrl.querySelector('button[data-dir="left"]');
+    const rightBtn = mobileCtrl.querySelector('button[data-dir="right"]');
+    const shootBtn = mobileCtrl.querySelector('button[data-dir="shoot"]');
+
+    const onDown = (dir)=>{ if (GAME_OVER) return; shootDir = dir; };
+    const onUp = ()=>{ if (GAME_OVER) return; shootDir = 0; };
+
+    const bindHold = (btn, dir)=>{
+      const down = ()=>onDown(dir);
+      const up = ()=>onUp();
+      btn.addEventListener('pointerdown', down);
+      btn.addEventListener('pointerup', up);
+      btn.addEventListener('pointerleave', up);
+      btn.addEventListener('pointercancel', up);
+      btnRemovers.push(()=>{
+        btn.removeEventListener('pointerdown', down);
+        btn.removeEventListener('pointerup', up);
+        btn.removeEventListener('pointerleave', up);
+        btn.removeEventListener('pointercancel', up);
+      });
+    };
+
+    if (leftBtn) bindHold(leftBtn, -1);
+    if (rightBtn) bindHold(rightBtn, 1);
+    if (shootBtn) {
+      const click = ()=>{ if (GAME_OVER) return; if (curBubble.dx===0 && curBubble.dy===0){ curBubble.dx = Math.sin(shootDeg)*curBubble.speed; curBubble.dy = -Math.cos(shootDeg)*curBubble.speed; } };
+      shootBtn.addEventListener('click', click);
+      btnRemovers.push(()=> shootBtn.removeEventListener('click', click));
+    }
+  }
+
+  // --- swipe to aim, tap to shoot ---
+  touchRemover = (function setupSwipe(){
+    let sx=0, sy=0, tracking=false;
+    const onStart = (e)=>{ const t=e.touches[0]; sx=t.clientX; sy=t.clientY; tracking=true; };
+    const onMove  = (e)=>{ if (tracking) e.preventDefault(); };
+    const onEnd   = (e)=>{
+      if (!tracking) return; tracking=false;
+      const t=e.changedTouches[0]; const dx=t.clientX-sx; const dy=t.clientY-sy;
+      const ax=Math.abs(dx), ay=Math.abs(dy);
+      if (Math.max(ax,ay) < 25){
+        // tap: shoot
+        if (curBubble.dx===0 && curBubble.dy===0){ curBubble.dx = Math.sin(shootDeg)*curBubble.speed; curBubble.dy = -Math.cos(shootDeg)*curBubble.speed; }
+        return;
+      }
+      // horizontal swipe: nudge aim direction briefly
+      if (ax>ay){
+        shootDir = dx>0 ? 1 : -1;
+        setTimeout(()=>{ shootDir = 0; }, 160);
+      }
+    };
+    canvas.addEventListener('touchstart', onStart, { passive:true });
+    canvas.addEventListener('touchmove',  onMove,  { passive:false });
+    canvas.addEventListener('touchend',   onEnd,   { passive:true });
+    return ()=>{
+      canvas.removeEventListener('touchstart', onStart);
+      canvas.removeEventListener('touchmove',  onMove);
+      canvas.removeEventListener('touchend',   onEnd);
+    };
+  })();
 
   // start loop
   requestAnimationFrame(loop);
